salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Base_Type__c.field-meta.xml
<CustomField>
    <fullName>Base_Type__c</fullName>
    <description>To capture equipment model base type for Energy Star.</description>
    <label>Base Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>