salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <description>Equipment model brand name.</description>
    <label>Brand Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>