salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Bulb_Product_Finder__c.field-meta.xml
<CustomField>
    <fullName>Bulb_Product_Finder__c</fullName>
    <label>Bulb Product Finder</label>
    <length>100</length>
    <type>Text</type>
</CustomField>