salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Bulb_Type__c.field-meta.xml
<CustomField>
    <fullName>Bulb_Type__c</fullName>
    <label>Bulb Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>