salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/CADR_Per_Watt_EE__c.field-meta.xml
<CustomField>
    <fullName>CADR_Per_Watt_EE__c</fullName>
    <label>CADR Per Watt EE</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>