salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Capacity_CADR__c.field-meta.xml
<CustomField>
    <fullName>Capacity_CADR__c</fullName>
    <label>Capacity CADR</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>