salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Capacity_Pints_Day__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Pints_Day__c</fullName>
    <label>Capacity (Pints/Day)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>