salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Capacity_Pints_Day_Appx_x1__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Pints_Day_Appx_x1__c</fullName>
    <label>Capacity (Pints/Day) Appx x1</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>