salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Equipment model category.</description>
    <label>Category</label>
    <type>TextArea</type>
</CustomField>