salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <description>Equipment model certification.</description>
    <label>Certification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>