salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/CF__c.field-meta.xml
<CustomField>
    <fullName>CF__c</fullName>
    <description>Coincidence Factor</description>
    <label>CF</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>