salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>Equipment model classification.</description>
    <label>Classification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>