salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Combined_Energy_Efficiency_Ratio_CEER__c.field-meta.xml
<CustomField>
    <fullName>Combined_Energy_Efficiency_Ratio_CEER__c</fullName>
    <label>Combined Energy Efficiency Ratio (CEER)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>