salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Connected_Functionality__c.field-meta.xml
<CustomField>
    <fullName>Connected_Functionality__c</fullName>
    <label>Connected Functionality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>