salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Cooling_Capacity_Btu_hr__c.field-meta.xml
<CustomField>
    <fullName>Cooling_Capacity_Btu_hr__c</fullName>
    <label>Cooling Capacity (Btu/hr)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>