salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/CP_Lumens__c.field-meta.xml
<CustomField>
    <fullName>CP_Lumens__c</fullName>
    <label>Calculation Parameter Lookup Lumens</label>
    <length>20</length>
    <type>Text</type>
</CustomField>