salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>