salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/EF__c.field-meta.xml
<CustomField>
    <fullName>EF__c</fullName>
    <label>Energy Factor</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>