salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Efficacy_Lumens_Watt__c.field-meta.xml
<CustomField>
    <fullName>Efficacy_Lumens_Watt__c</fullName>
    <description>Equipment model efficacy in lumens/watt.</description>
    <label>Efficacy Lumens Watt</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>