salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/ENERGY_STAR_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>ENERGY_STAR_Partner_Name__c</fullName>
    <label>ENERGY STAR Partner Name</label>
    <type>TextArea</type>
</CustomField>