salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Unique identifier that can be used to reference this equipment model from other objects</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier that can be used to reference this equipment model from other objects</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>