salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Fixture_Code__c.field-meta.xml
<CustomField>
    <fullName>Fixture_Code__c</fullName>
    <label>Fixture Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>