salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Fixture_Type__c.field-meta.xml
<CustomField>
    <fullName>Fixture_Type__c</fullName>
    <label>Fixture Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>