salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/General_Application__c.field-meta.xml
<CustomField>
    <fullName>General_Application__c</fullName>
    <description>General application of equipment model</description>
    <label>General_Application</label>
    <length>100</length>
    <type>Text</type>
</CustomField>