salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/GPY_Savings__c.field-meta.xml
<CustomField>
    <fullName>GPY_Savings__c</fullName>
    <description>Water savings for this model, expressed in 'gallons per year'</description>
    <label>GPY Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>