salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/HSPF__c.field-meta.xml
<CustomField>
    <fullName>HSPF__c</fullName>
    <label>HSPF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>