salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/kW_Savings__c.field-meta.xml
<CustomField>
    <fullName>kW_Savings__c</fullName>
    <description>kW savings (per unit) for this model</description>
    <inlineHelpText>kW savings (per unit) for this model</inlineHelpText>
    <label>kW Savings</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>