salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/kWh_Savings__c.field-meta.xml
<CustomField>
    <fullName>kWh_Savings__c</fullName>
    <description>kWh savings (per unit) for this model</description>
    <inlineHelpText>kWh savings (per unit) for this model</inlineHelpText>
    <label>kWh Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>