salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Lamps_Per_Fixture__c.field-meta.xml
<CustomField>
    <fullName>Lamps_Per_Fixture__c</fullName>
    <label>Lamps Per Fixture</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>