salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Life_Hours__c.field-meta.xml
<CustomField>
    <fullName>Life_Hours__c</fullName>
    <description>Life Hours of Retail Lighting Lamps for Energy Star</description>
    <label>Life Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>