salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Manufacturer_Description__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Description__c</fullName>
    <description>Manufacturer's description for this model</description>
    <label>Manufacturer Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>