salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Manufacturer_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Part_Number__c</fullName>
    <description>Manufacturer's part number for this model</description>
    <inlineHelpText>Manufacturer's part number for this model</inlineHelpText>
    <label>Manufacturer Part Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>