salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Max_Capacity_at_5F__c.field-meta.xml
<CustomField>
    <fullName>Max_Capacity_at_5F__c</fullName>
    <label>Max Capacity at 5F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>