salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Maximum_Overall_Diameter_mm__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Overall_Diameter_mm__c</fullName>
    <label>Maximum Overall Diameter (mm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>