salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Primary_Use__c.field-meta.xml
<CustomField>
    <fullName>Primary_Use__c</fullName>
    <description>Equipment model primary use.</description>
    <label>Primary_Use</label>
    <type>TextArea</type>
</CustomField>