salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Product_Finder_Bulb_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Finder_Bulb_Type__c</fullName>
    <label>Product Finder Bulb Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>