salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/SEER__c.field-meta.xml
<CustomField>
    <fullName>SEER__c</fullName>
    <label>SEER</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>