salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Sleep_Power__c.field-meta.xml
<CustomField>
    <fullName>Sleep_Power__c</fullName>
    <description>EnergyStar Database (Energy Use (Sleep Mode) (Watts))</description>
    <label>Sleep Power</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>