salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Standby_Loss__c.field-meta.xml
<CustomField>
    <fullName>Standby_Loss__c</fullName>
    <label>Standby Loss</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>