salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Standby_Power_EE__c.field-meta.xml
<CustomField>
    <fullName>Standby_Power_EE__c</fullName>
    <label>Standby Power EE</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>