salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Storage_Volume_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Storage_Volume_Gallons__c</fullName>
    <label>Storage Volume (Gallons)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>