salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Thermal_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Thermal_Efficiency__c</fullName>
    <label>Thermal Efficiency</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>