salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Therms_Savings__c.field-meta.xml
<CustomField>
    <fullName>Therms_Savings__c</fullName>
    <description>Therms savings (per unit) for this model</description>
    <label>Therms Savings</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>