salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Three_Way__c.field-meta.xml
<CustomField>
    <fullName>Three_Way__c</fullName>
    <label>Three Way</label>
    <length>10</length>
    <type>Text</type>
</CustomField>