salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Uniform_Energy_Factor_UEF__c.field-meta.xml
<CustomField>
    <fullName>Uniform_Energy_Factor_UEF__c</fullName>
    <label>Uniform Energy Factor (UEF)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>