salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <description>Beginning of date range during which this record would be used</description>
    <inlineHelpText>Beginning of date range during which this record would be used</inlineHelpText>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>