salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <description>End of date range during which this record would be used</description>
    <inlineHelpText>End of date range during which this record would be used</inlineHelpText>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>