salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Watts_Efficient__c.field-meta.xml
<CustomField>
    <fullName>Watts_Efficient__c</fullName>
    <label>Watts Efficient</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>