salesforce_sfdx_QA/main/default/objects/Equipment_Model__c/fields/Watts_Per_Lamp__c.field-meta.xml
<CustomField>
    <fullName>Watts_Per_Lamp__c</fullName>
    <label>Watts Per Lamp</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>